cleaning code, fixing style on mobile mode for chart setting

--- a/sass/components/_ciq-chart-setting.scss
+++ b/sass/components/_ciq-chart-setting.scss
@@ -47,7 +47,6 @@
         }
     }
     .body {
-        // height: 100%;
         padding: 16px;
         transition: height 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
         min-height: 190px;
@@ -121,10 +120,10 @@
         }
     }
     .cq-setting-container{
-        @include transition( height 250ms ease-out);
         height: 265px;
         width: 280px;
         position: relative;
+        @include transition( height 250ms ease-out);
         &.container-language{
             height: 350px;
         }
@@ -133,10 +132,7 @@
             width: 280px;
             position: absolute;
             top: 0px;
-            @include transition(
-              transform 250ms ease-out,
-              opacity 0.17s ease-out
-          );
+            @include transition( transform 250ms ease-out, opacity 0.17s ease-out);
         }
         .cq-setting-main{
             transform: translateX(-100%);
@@ -176,6 +172,14 @@
             .icon-close-menu{
                 pointer-events: initial;
                 opacity: 1;
+            }
+        }
+        .cq-setting-container{
+            width: 100%;
+            position: relative;
+            .cq-setting-main,
+            .cq-setting-language{
+                width: 100%;
             }
         }
     }
