--- a/sass/styles/chart.scss
+++ b/sass/styles/chart.scss
@@ -40,7 +40,7 @@ html, body {
 .cq-chart-control-left{
     .chartContainer{
         width: calc( 100% - 90px );
-        margin-left: 100px;
+        margin-left: 90px;
     }
 }
 
